Improving definition of data science.

--- a/courses.tex
+++ b/courses.tex
@@ -113,7 +113,7 @@ Case studies will be presented during exam weeks.
 \newpage
 \newgeometry{margin=1cm}
 \thispagestyle{empty}
-\section*{CMC-1X Practical Data Science}
+\section*{CMC-16 Practical Data Science}
 
 \emph{Course plan}
 
