--- a/references.bib
+++ b/references.bib
@@ -32,3 +32,9 @@
   year={2023},
   publisher={O'Reilly Media},
   edition=2}
+
+@book{Kelleher2018,
+  author={John D. Kelleher and Brendan Tierney},
+  title={Data Science},
+  year=2018,
+  publisher={The MIT Press}}
