--- a/data.tex
+++ b/data.tex
@@ -23,7 +23,8 @@ under development.  We never know when new ``data-related'' methods will become 
 or a trend.  Also, \textcite{Zumel2019}'s view gives the impression that data science is a
 operations research subfield.  Although I will not try to prove otherwise, I think it will
 be much more useful to see it as an independent field of study.  Obviously, there will be
-many intersections between both areas (and many other areas as well), but I will try my best to keep definitions and
+many intersections between both areas (and many other areas as well.)  Because of such
+intersections, I will try my best to keep definitions and
 terms standardized throughout chapters, sometimes avoiding popular terms that may generate
 ambiguities or confusion.
 
@@ -36,7 +37,7 @@ science enables us to do.  From these thoughts, let's define the term.
   measurable phenomena.
 \end{displayquote}
 
-I want to highlight some terms in this definition.  \emph{Computational methods} means
+I want to highlight the meaning of some terms in this definition.  \emph{Computational methods} means
 that data science methods use computers to handle data and perform the calculations.
 \emph{Knowledge} means information that humans can easily understand or apply to solve
 problems.  \emph{Measurable phenomena} are events or processes where raw data can be
@@ -44,14 +45,19 @@ quantified in some way.  \emph{Raw data} are data collected directly from some s
 that have not been subject to any other manipulation by a software program or a human
 expert.
 
+\textcite{Kelleher2018} summarize very well the challenges data science takes up:
+``extracting non-obvious and useful patterns from large data sets [\dots]; capturing,
+cleaning, and transforming [\dots] data; [storing and processing] big [\dots] data sets;
+and questions related to data ethics and regulation.''
+
 Data science contrasts with conventional sciences.  Usually, a ``science'' is named after
-its object of study.  Biology is the study of the life, earth science studies the planet
+its object of study.  Biology is the study of the life, Earth science studies the planet
 Earth, and so on.  I argue that data science does not study data itself, but how we can
 ``listen'' them to understand a phenomenon.  The conventional scientific paradigm is
 essentially model-driven: we observe a phenomenon related to the object of study, we
 reason the possible explanation (the model or hypothesis,) and we validate our hypothesis
 (most of the time using data, though.)  In data science, however, we extract the knowledge
 directly and primarily from the data.  The expert knowledge and reasoning may be taken
-into account, but we give data the opportunity to surprise us.  Thus, the object of the
-study of data science are the computational methods and processes that can extract
-reliable knowledge from amounts of data we would never be able to analyse ``by hand.''
+into account, but we give data the opportunity to surprise us.  Thus, the objects of the
+study in data science are the computational methods and processes that can extract
+reliable and ethical knowledge from huge amounts of data.
