Fixing some captalizations.

--- a/about.tex
+++ b/about.tex
@@ -8,7 +8,7 @@ Also, it is important to highlight that:
 \begin{itemize}
   \item This is not a Machine Learning book, and I do not intend to explain how specific
     ML algorithms work.
-  \item This contains some kind of introductory material on Data Science.  Although I will
+  \item This contains some kind of introductory material on data science.  Although I will
     introduce the fundamental concepts, I expect you have strong mathematical and
     statistics background.
   \item An artificial constraint I have imposed in the material (for the sake of the
@@ -18,11 +18,11 @@ Also, it is important to highlight that:
     learning, etc.
 \end{itemize}
 
-I have decided to work on this material because the books I like on Data Science are
+I have decided to work on this material because the books I like on data science are
 either
 \begin{itemize}
   \item too broad and too shallow, in the sense they hide many mathematical foundations
-    and focus on just explaining what Data Science is and where it is applied;
+    and focus on just explaining what data science is and where it is applied;
   \item too tool-centric, in the sense that they focus only on a specific toolbox or
     programming language; or
   \item too machine-learning-y, exposing many machine learning algorithms and missing the
@@ -43,18 +43,18 @@ So\dots, I expect my approach on the subject provide:
 
 This book will cover the following material:
 \begin{itemize}
-  \item Brief history of Data Science.
-  \item Background topics (Statistics, Calculus).
+  \item Brief history of data science.
+  \item Background topics.
   \item Fundamental data concepts.
-  \item Stages in a Data Science project.
+  \item Stages in a data science project.
   \item Data Infrastructure.
   \item Data integration from multiple sources.
   \item Data engineering and shaping.
-  \item Inductive learning and principles of Statistical Learning Theory.
+  \item Inductive learning and principles of statistical learning theory.
   \item Application of Machine Learning models in real-world problems.
-  \item Experimental planning for Data Science.
+  \item Experimental planning for data science.
   \item Model evaluation and Bayesian analysis.
   \item Documentation and deployment.
-  \item Ethical and legal issues in Data Science.
+  \item Ethical and legal issues in data science.
   \item Privacy-preserving computational approaches.
 \end{itemize}
