--- a/courses.tex
+++ b/courses.tex
@@ -1,6 +1,6 @@
 \chapter*{Course plan}
 
-For administrative reasons, I present the course plan for PO-235 and CMC-1X.
+For administrative reasons, I present the course plan for PO-235 and CMC-16.
 
 \newpage
 \newgeometry{margin=1cm}
@@ -113,7 +113,7 @@ Case studies will be presented during exam weeks.
 \newpage
 \newgeometry{margin=1cm}
 \thispagestyle{empty}
-\section*{CMC-16 Practical Data Science}
+\section*{CMC-16 Data Science Practices}
 
 \emph{Course plan}
 
