--- a/history.tex
+++ b/history.tex
@@ -1,11 +1,11 @@
-\chapter{Brief history of Data Science}
+\chapter{Brief history of data science}
 
 There are many points-of-view about the beginning of data science.  For the sake of
 contextualization, I separate the topic in three approaches: the history of the term,
 important figures and other historical markers, and a broad timeline of data-driven
 sciences.
 
-\section{The term ``Data Science''}
+\section{The term ``data science''}
 
 \paragraph{Peter Naur.}
 
