--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@
   ItalicFont={*-Italic},
   BoldItalicFont={*-BoldItalic}]
 
-\title{Data Science \\ \large Foundations and practices}
+\title{Data science \\ \large Foundations and practices}
 \author{Filipe A. N. Verri}
 
 \maketitle
