Small fixes and table of contents.

--- a/courses.tex
+++ b/courses.tex
@@ -7,9 +7,7 @@ For administrative reasons, I present the course plan for PO-235 and CMC-16.
 \thispagestyle{empty}
 \section*{PO-235 Data Science Project}
 
-\emph{Course plan}
-
-\nth{1} Semester of \the\year{}
+\emph{Course plan (\the\year{})}
 
 Prof. Filipe A. N. Verri
 
@@ -48,13 +46,13 @@ Scientific paper and oral presentation about the case study for the final exam.
   \item John D. Kelleher and Brendan Tierney. Data Science, MIT Press, 2018.
 \end{itemize}
 
-\thispagestyle{empty}
 \paragraph{Must read:}
 \begin{itemize}
   \item In-progress textbook at \url{https://comp.ita.br/~verri/dsp-book}.
   \item \fullcite{Vapnik1999}.
   \item \fullcite{Benavoli2017}.
 \end{itemize}
+\thispagestyle{empty}
 
 \paragraph{Calendar:} The expected schedule is presented below.
 
@@ -115,7 +113,7 @@ Case studies will be presented during exam weeks.
 \thispagestyle{empty}
 \section*{CMC-16 Data Science Practices}
 
-\emph{Course plan}
+\emph{Course plan (\the\year{})}
 
 \nth{1} Semester of \the\year{}
 
@@ -211,3 +209,4 @@ Essay and oral presentation about the case study (in groups) for the final exam.
 \end{center}
 
 \restoregeometry
+\thispagestyle{empty}
