--- a/references.bib
+++ b/references.bib
@@ -35,6 +35,6 @@
 
 @book{Kelleher2018,
   author={John D. Kelleher and Brendan Tierney},
-  title={Data Science},
+  title={Data science},
   year=2018,
   publisher={The MIT Press}}
