--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \usepackage{geometry}
 \usepackage{csquotes}
 \usepackage{multirow}
+%\usepackage[Glenn]{fncychap}
 
 \renewcommand{\vec}[1]{\mathbf{#1}}
 \nonfrenchspacing
@@ -34,10 +35,12 @@
   ItalicFont={*-Italic},
   BoldItalicFont={*-BoldItalic}]
 
-\title{Data science \\ \large Foundations and practices}
+\title{\sc Data science \\ \large Foundations and practices}
 \author{Filipe A. N. Verri}
 
 \maketitle
+
+\tableofcontents
 
 \input{about}
 \input{courses}
@@ -46,6 +49,7 @@
 \input{data}
 \input{inductive}
 \input{tasks}
+
 \printbibliography
 
 \end{document}
