--- a/history.tex
+++ b/history.tex
@@ -7,11 +7,14 @@ sciences.
 
 \section{The term ``data science''}
 
-\paragraph{Peter Naur.}
+\paragraph{Peter Naur (1928 -- 2016)}
 
 The term ``data science'' itself was coined in the 1960s by Peter Naur (/naʊə/). Naur was
 a Danish computer scientist and mathematician who made significant contributions to the
-field of computer science, including his work on the development of programming languages.
+field of computer science, including his work on the development of programming
+languages\footnote{He is best remembered as a contributor, with John Backus, to the
+Backus–Naur form (BNF) notation used in describing the syntax for most programming
+languages.}.
 His ideas and concepts laid the groundwork for the way we think about programming and data
 processing today.
 
@@ -35,12 +38,33 @@ processing’, North-Holland Publ. Co., Amsterdam, 1971.} Note however that his 
 science only ``deals with data [\dots] while the relation of data to what they represent
 is delegated to other fields and sciences.''
 
-TODO:
-In the late 1980s and early 1990s, William S. Cleveland, a prominent statistician, used
-the term ``data science" in his work to describe the emerging discipline that combined
-elements of statistics, computer science, and domain expertise. His efforts were aimed at
-developing methodologies for exploring and analyzing complex datasets, which laid the
-foundation for what we now recognize as data science.
+\paragraph{William Cleveland (born 1943)}
+
+In 2001, a prominent statistician used the term ``data science" in his work to describe a
+new discipline that comes from his ``plan to enlarge the major areas of technical work of
+the field of statistics\footnote{W. S. Cleveland. Data Science: An Action Plan for
+Expanding the Technical Areas of the Field of Statistics. ISI Review, 69:21–26, 2001.}.''
+In 2014, that work was republished\footnote{W. S. Cleveland.
+Data Science: An Action Plan for the Field of Statistics. Statistical Analysis and Data
+Mining, 7:414–417, 2014. reprinting of 2001 article in ISI Review, Vol 69.}.
+He advocates the expansion of statistics beyond theory into technical areas, significantly
+changing statistics.  Thus, it warranted a new name.
+
+As a result, William Swain Cleveland II is credited to define data science as it is most
+used today. He is a highly influential figure in the fields of statistics, machine
+learning, data visualization, data analysis for multidisciplinary studies, and high
+performance computing for deep data analysis.
+
+\paragraph{Buzzword or a new science?}
+
+Be aware that literature has no consensus on the definition of data science, and it is still considered
+by some to be a buzzword\footnote{Press, Gil. "Data Science: What's The Half-Life of a
+Buzzword?". Forbes. Available at
+\url{https://www.forbes.com/sites/gilpress/2013/08/19/data-science-whats-the-half-life-of-a-buzzword/}}.
+
+In \cref{chap:data}, I dare to provide a (yet another\dots) definition for the term.  I
+argue that its object of study can be precisely established to support it as a new
+science.
 
 \section{Historical markers}
 
