--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \usepackage{geometry}
 \usepackage{csquotes}
 \usepackage{multirow}
+\usepackage{cleveref}
 %\usepackage[Glenn]{fncychap}
 
 \renewcommand{\vec}[1]{\mathbf{#1}}
