--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,7 @@
 \usepackage{multirow}
 \usepackage{cleveref}
 %\usepackage[Glenn]{fncychap}
+\usepackage{tikz}
 
 \renewcommand{\vec}[1]{\mathbf{#1}}
 \nonfrenchspacing
