--- a/history.tex
+++ b/history.tex
@@ -1,11 +1,14 @@
 \chapter{Brief history of data science}
 
 There are many points-of-view about the beginning of data science.  For the sake of
-contextualization, I separate the topic in three approaches: the history of the term,
-important figures and other historical markers, and a broad timeline of data-driven
-sciences.
+contextualization, I separate the topic in two approaches: the history of the term itself
+and a broad timeline of data-driven sciences highlighting the important figures in each
+age.
 
 \section{The term ``data science''}
+
+The term data science is recent and has been used to label rather different fields of
+study.  In the following, I emphasize a few notable usage of the term.
 
 \paragraph{Peter Naur (1928 -- 2016)}
 
@@ -38,6 +41,34 @@ processing’, North-Holland Publ. Co., Amsterdam, 1971.} Note however that his 
 science only ``deals with data [\dots] while the relation of data to what they represent
 is delegated to other fields and sciences.''
 
+\def\firstcircle{(0,0) circle (20mm)}
+\def\secondcircle{(0:5mm) circle (15mm)}
+\def\thirdcircle{(0:40mm) circle (15mm)}
+
+\colorlet{circle edge}{black!50}
+\colorlet{circle area}{black!20}
+
+\tikzset{filled/.style={fill=circle area, draw=circle edge, thick},
+    outline/.style={draw=circle edge, thick}}
+
+\begin{figure}
+  \centering
+  \begin{tikzpicture}
+    \begin{scope}
+      \clip \firstcircle;
+      \fill[filled] \secondcircle;
+    \end{scope}
+    \draw[outline] \firstcircle node(ds) {};
+    \draw[outline] \secondcircle node {computer science};
+    \draw[outline] \thirdcircle node {domain expertise};
+    \node[anchor=north,above] at (0,2) {data science};
+  \end{tikzpicture}
+  \caption{
+    Naur's view of data science.  For him, data science studies the techniques to deal
+    with data, but he delegates the meaning of data to other fields.
+  }
+\end{figure}
+
 \paragraph{William Cleveland (born 1943)}
 
 In 2001, a prominent statistician used the term ``data science" in his work to describe a
@@ -66,9 +97,7 @@ In \cref{chap:data}, I dare to provide a (yet another\dots) definition for the t
 argue that its object of study can be precisely established to support it as a new
 science.
 
-\section{Historical markers}
-
-\section{Timeline}
+\section{Timeline and historical markers}
 
 \subsection{Timeline of data collection}
 
