--- a/data.tex
+++ b/data.tex
@@ -7,7 +7,7 @@
   \item Tidy data
 \end{itemize}
 
-The obvious start point for someone studying data science is the definition of the term
+A useful start point for someone studying data science is the definition of the term
 itself.
 
 For \textcite{Zumel2019}, \emph{``data science is a cross-disciplinary practice that draws
