--- a/data.tex
+++ b/data.tex
@@ -62,3 +62,32 @@ directly and primarily from the data.  The expert knowledge and reasoning may be
 into account, but we give data the opportunity to surprise us.  Thus, the objects of the
 study in data science are the computational methods and processes that can extract
 reliable and ethical knowledge from huge amounts of data.
+
+\def\verrids{(0,0) circle (20mm)}
+\def\verrist{(-2.5,0) circle (15mm)}
+\def\verride {(2.5,0) circle (15mm)}
+\def\verrics {(0,-2.5) circle (15mm)}
+
+\begin{figure}
+  \centering
+  \begin{tikzpicture}
+    \begin{scope}
+      \clip \verrids;
+      \fill[filled] \verrist;
+      \fill[filled] \verride;
+      \fill[filled] \verrics;
+    \end{scope}
+    \draw[outline] \verrids node(ds) {};
+    \draw[outline] \verrist node {statistics};
+    \draw[outline] \verride node {domain expertise};
+    \draw[outline] \verrics node {computer science};
+    \node[anchor=north,above] at (0,2) {data science};
+  \end{tikzpicture}
+  \caption{
+    My view of data science.  Data science is an entire new science.  Being a new science
+    does not mean that its basis is built from the ground up.  Most of the subjects in
+    data science come from other sciences, but its object of study (computational methods
+    to extract knowledge from measurable phenomena) is particular enough to unfold
+    new scientific questions -- such as data ethics, data collection, etc.
+  }
+\end{figure}
