--- a/history.tex
+++ b/history.tex
@@ -10,6 +10,34 @@ age.
 The term data science is recent and has been used to label rather different fields of
 study.  In the following, I emphasize a few notable usage of the term.
 
+\def\naurds{(0,0) circle (20mm)}
+\def\naurcs{(0:5mm) circle (15mm)}
+\def\naurde{(0:40mm) circle (15mm)}
+
+\colorlet{circle edge}{black!50}
+\colorlet{circle area}{black!20}
+
+\tikzset{filled/.style={fill=circle area, draw=circle edge, thick},
+    outline/.style={draw=circle edge, thick}}
+
+\begin{figure}
+  \centering
+  \begin{tikzpicture}
+    \begin{scope}
+      \clip \naurds;
+      \fill[filled] \naurcs;
+    \end{scope}
+    \draw[outline] \naurds node(ds) {};
+    \draw[outline] \naurcs node {computer science};
+    \draw[outline] \naurde node {domain expertise};
+    \node[anchor=north,above] at (0,2) {data science};
+  \end{tikzpicture}
+  \caption{
+    Naur's view of data science.  For him, data science studies the techniques to deal
+    with data, but he delegates the meaning of data to other fields.
+  }
+\end{figure}
+
 \paragraph{Peter Naur (1928 -- 2016)}
 
 The term ``data science'' itself was coined in the 1960s by Peter Naur (/naʊə/). Naur was
@@ -41,51 +69,6 @@ processing’, North-Holland Publ. Co., Amsterdam, 1971.} Note however that his 
 science only ``deals with data [\dots] while the relation of data to what they represent
 is delegated to other fields and sciences.''
 
-\def\naurds{(0,0) circle (20mm)}
-\def\naurcs{(0:5mm) circle (15mm)}
-\def\naurde{(0:40mm) circle (15mm)}
-
-\colorlet{circle edge}{black!50}
-\colorlet{circle area}{black!20}
-
-\tikzset{filled/.style={fill=circle area, draw=circle edge, thick},
-    outline/.style={draw=circle edge, thick}}
-
-\begin{figure}
-  \centering
-  \begin{tikzpicture}
-    \begin{scope}
-      \clip \naurds;
-      \fill[filled] \naurcs;
-    \end{scope}
-    \draw[outline] \naurds node(ds) {};
-    \draw[outline] \naurcs node {computer science};
-    \draw[outline] \naurde node {domain expertise};
-    \node[anchor=north,above] at (0,2) {data science};
-  \end{tikzpicture}
-  \caption{
-    Naur's view of data science.  For him, data science studies the techniques to deal
-    with data, but he delegates the meaning of data to other fields.
-  }
-\end{figure}
-
-\paragraph{William Cleveland (born 1943)}
-
-In 2001, a prominent statistician used the term ``data science" in his work to describe a
-new discipline that comes from his ``plan to enlarge the major areas of technical work of
-the field of statistics\footnote{W. S. Cleveland. Data Science: An Action Plan for
-Expanding the Technical Areas of the Field of Statistics. ISI Review, 69:21–26, 2001.}.''
-In 2014, that work was republished\footnote{W. S. Cleveland.
-Data Science: An Action Plan for the Field of Statistics. Statistical Analysis and Data
-Mining, 7:414–417, 2014. reprinting of 2001 article in ISI Review, Vol 69.}.
-He advocates the expansion of statistics beyond theory into technical areas, significantly
-changing statistics.  Thus, it warranted a new name.
-
-As a result, William Swain Cleveland II is credited to define data science as it is most
-used today. He is a highly influential figure in the fields of statistics, machine
-learning, data visualization, data analysis for multidisciplinary studies, and high
-performance computing for deep data analysis.
-
 \def\clevelandds{(0,0) circle (20mm)}
 \def\clevelandst{(0:-5mm) circle (15mm)}
 \def\clevelandde {(2,1) circle (15mm)}
@@ -112,6 +95,23 @@ performance computing for deep data analysis.
   }
 \end{figure}
 
+\paragraph{William Cleveland (born 1943)}
+
+In 2001, a prominent statistician used the term ``data science" in his work to describe a
+new discipline that comes from his ``plan to enlarge the major areas of technical work of
+the field of statistics\footnote{W. S. Cleveland. Data Science: An Action Plan for
+Expanding the Technical Areas of the Field of Statistics. ISI Review, 69:21–26, 2001.}.''
+In 2014, that work was republished\footnote{W. S. Cleveland.
+Data Science: An Action Plan for the Field of Statistics. Statistical Analysis and Data
+Mining, 7:414–417, 2014. reprinting of 2001 article in ISI Review, Vol 69.}.
+He advocates the expansion of statistics beyond theory into technical areas, significantly
+changing statistics.  Thus, it warranted a new name.
+
+As a result, William Swain Cleveland II is credited to define data science as it is most
+used today. He is a highly influential figure in the fields of statistics, machine
+learning, data visualization, data analysis for multidisciplinary studies, and high
+performance computing for deep data analysis.
+
 \paragraph{Buzzword or a new science?}
 
 Be aware that literature has no consensus on the definition of data science, and it is still considered
@@ -136,3 +136,22 @@ science.
 \end{itemize}
 
 \subsection{Timeline of data analysis}
+
+\begin{itemize}
+  \item Summary statistics
+  \item Probability Advent 17, 18th
+  \item Statistical learning 19th
+    \begin{itemize}
+      \item Bayes rule
+      \item Gauss’ method of least squares
+      \item Playfair data visualization
+    \end{itemize}
+  \item 20th inference
+    \begin{itemize}
+      \item Pearson hypothesis testing
+      \item Fisher multivariate analysis, maximum likelihood estimate
+    \end{itemize}
+  \item Computer: McCulloch Pitts, Shannon information theory, Fix and Hodged discriminatory analysis, knn
+  \item Machine learning: 1965 Nils Nilsson neural network, 1966 Hunt inducing trees, Kmeans, Vapnik 71
+  \item Today: Ensembles, Deep learning: vision and language, KDD
+\end{itemize}
