--- a/courses.tex
+++ b/courses.tex
@@ -5,7 +5,7 @@ For administrative reasons, I present the course plan for PO-235 and CMC-16.
 \newpage
 \newgeometry{margin=1cm}
 \thispagestyle{empty}
-\section*{PO-235 Data Science Project}
+\section*{PO-235 Data science project}
 
 \emph{Course plan (\the\year{})}
 
@@ -19,12 +19,12 @@ Prof. Filipe A. N. Verri
 beginner level machine learning skills.
 
 \paragraph{Course program:}
-Brief history of Data Science.  Fundamental data concepts. Stages in a Data Science
+Brief history of data science.  Fundamental data concepts. Stages in a Data Science
 project.  Data Infrastructure. Data integration from multiple sources. Data engineering
-and shaping.  Inductive learning and principles of Statistical Learning Theory.
-Application of Machine Learning models in real-world problems.  Experimental planning for
-Data Science. Model evaluation and Bayesian analysis.  Documentation and deployment.
-Ethical and legal issues in Data Science.  Privacy-preserving computational approaches.
+and shaping.  Inductive learning and principles of statistical learning theory.
+Application of machine learning models in real-world problems.  Experimental planning for
+data science. Model evaluation and Bayesian analysis.  Documentation and deployment.
+Ethical and legal issues in data science.  Privacy-preserving computational approaches.
 
 \paragraph{Goals:}
 Providing the theoretical background and the practical concepts to develop an end-to-end
@@ -43,7 +43,7 @@ Scientific paper and oral presentation about the case study for the final exam.
 \begin{itemize}
   \item Nina Zumel and John Mount. Practical Data Science with R. Manning, 2nd Edition, 2019.
   \item Hadley Wickham and Garret Grolemund, R for Data Science: Import, Tidy, Transform, Visualize, and Model Data. O’Reilly Media, 2017.
-  \item John D. Kelleher and Brendan Tierney. Data Science, MIT Press, 2018.
+  \item John D. Kelleher and Brendan Tierney. Data science, MIT Press, 2018.
 \end{itemize}
 
 \paragraph{Must read:}
@@ -63,13 +63,15 @@ Scientific paper and oral presentation about the case study for the final exam.
     \midrule
     Week & Topics \\
     \midrule
-    1 & Brief history of Data Science and background topics \\
+    \multirow{2}{*}{1} & Brief history of data science (\cref{chap:history}) \\
+      & Peliminaries (\cref{chap:preliminaries})\\
     \midrule
     2 & \bf Written test \\
     \midrule
-    3 & Fundamental data concepts and stages in a Data Science project \\
+    \multirow{2}{*}{3} & Fundamental data concepts (\cref{chap:data}) \\
+      & Stages in a data science project \\
     \midrule
-    4 & \multirow{2}{*}{Inductive learning and Statistical Learning Theory} \\
+    4 & \multirow{2}{*}{Inductive learning and statistical learning theory} \\
     5 &  \\
     \midrule
     6 & Data infrastructure and data integration from multiple sources \\
@@ -88,10 +90,10 @@ Scientific paper and oral presentation about the case study for the final exam.
     \midrule
     Week & Topics \\
     \midrule
-    1 & \multirow{2}{*}{Application of Machine Learning models in real-world problems} \\
+    1 & \multirow{2}{*}{Application of machine learning models in real-world problems} \\
     2 &  \\
     \midrule
-    3 & \multirow{2}{*}{Experimental planning for Data Science} \\
+    3 & \multirow{2}{*}{Experimental planning for data science} \\
     4 & \\
     \midrule
     5 & \multirow{2}{*}{Model evaluation and Bayesian analysis} \\
@@ -100,7 +102,7 @@ Scientific paper and oral presentation about the case study for the final exam.
     7 & \bf Written test \\
     \midrule
     \multirow{3}{*}{8} & Documentation and deployment \\
-      & Ethical and legal issues in Data Science \\
+      & Ethical and legal issues in data science \\
       & Privacy-preserving computational approaches \\
     \bottomrule
   \end{tabular}
@@ -111,7 +113,7 @@ Case studies will be presented during exam weeks.
 \newpage
 \newgeometry{margin=1cm}
 \thispagestyle{empty}
-\section*{CMC-16 Data Science Practices}
+\section*{CMC-16 Data science practices}
 
 \emph{Course plan (\the\year{})}
 
@@ -128,7 +130,7 @@ Prof. Filipe A. N. Verri
 \paragraph{Course program:}
 Brief history of Data Science. Stages in a Data Science project. Tidy Data. Data
 integration from multiple sources. Data engineering and shaping. Inductive learning and
-Statistical Learning Theory. Experimental planning for Data Science. Model evaluation and
+statistical learning theory. Experimental planning for Data Science. Model evaluation and
 Bayesian Analysis. Documentation and deployment. Privacy-preserving computational
 approaches.
 
@@ -181,7 +183,7 @@ Essay and oral presentation about the case study (in groups) for the final exam.
     2 & Stages in a Data Science project \\
     3 & Tidy Data and data integration from multiple sources \\
     4 & Data engineering and shaping \\
-    5 & \multirow{2}{*}{Inductive learning and Statistical Learning Theory} \\
+    5 & \multirow{2}{*}{Inductive learning and statistical learning theory} \\
     6 &  \\
     7 & Case study discussion and definitions \\
     8 & \bf Written test \\
