--- a/history.tex
+++ b/history.tex
@@ -1,4 +1,5 @@
 \chapter{Brief history of data science}
+\label{chap:history}
 
 There are many points-of-view about the beginning of data science.  For the sake of
 contextualization, I separate the topic in two approaches: the history of the term itself
