--- a/courses.tex
+++ b/courses.tex
@@ -59,14 +59,14 @@ Scientific paper and oral presentation about the case study for the final exam.
 \begin{center}
   \begin{tabular}{ll}
     \toprule
-    \multicolumn{2}{c}{\bf \nth{1} Quarter} \\
+    \multicolumn{2}{c}{\bfseries \nth{1} Quarter} \\
     \midrule
     Week & Topics \\
     \midrule
     \multirow{2}{*}{1} & Brief history of data science (\cref{chap:history}) \\
       & Peliminaries (\cref{chap:preliminaries})\\
     \midrule
-    2 & \bf Written test \\
+    2 & \bfseries Written test \\
     \midrule
     \multirow{2}{*}{3} & Fundamental data concepts (\cref{chap:data}) \\
       & Stages in a data science project \\
@@ -78,7 +78,7 @@ Scientific paper and oral presentation about the case study for the final exam.
     \midrule
     7 & Data engineering and shaping \\
     \midrule
-    8 & \bf Written test \\
+    8 & \bfseries Written test \\
     \bottomrule
   \end{tabular}
 \end{center}
@@ -86,7 +86,7 @@ Scientific paper and oral presentation about the case study for the final exam.
 \begin{center}
   \begin{tabular}{ll}
     \toprule
-    \multicolumn{2}{c}{\bf \nth{2} Quarter} \\
+    \multicolumn{2}{c}{\bfseries \nth{2} Quarter} \\
     \midrule
     Week & Topics \\
     \midrule
@@ -99,7 +99,7 @@ Scientific paper and oral presentation about the case study for the final exam.
     5 & \multirow{2}{*}{Model evaluation and Bayesian analysis} \\
     6 & \\
     \midrule
-    7 & \bf Written test \\
+    7 & \bfseries Written test \\
     \midrule
     \multirow{3}{*}{8} & Documentation and deployment \\
       & Ethical and legal issues in data science \\
@@ -155,6 +155,7 @@ classes and home study hours, including programming and writing essays.
 \paragraph{Grading:} One individual written test in the \nth{1} and another in the \nth{2} quarter.
 Essay and oral presentation about the case study (in groups) for the final exam.
 
+\newpage
 \paragraph{Bibliography:}
 \begin{itemize}
   \item Nina Zumel and John Mount. Practical Data Science with R. Manning, 2nd Edition, 2019.
@@ -175,7 +176,7 @@ Essay and oral presentation about the case study (in groups) for the final exam.
 \begin{center}
   \begin{tabular}{ll}
     \toprule
-    \multicolumn{2}{c}{\bf \nth{1} Quarter} \\
+    \multicolumn{2}{c}{\bfseries \nth{1} Quarter} \\
     \midrule
     Week & Topics \\
     \midrule
@@ -186,7 +187,7 @@ Essay and oral presentation about the case study (in groups) for the final exam.
     5 & \multirow{2}{*}{Inductive learning and statistical learning theory} \\
     6 &  \\
     7 & Case study discussion and definitions \\
-    8 & \bf Written test \\
+    8 & \bfseries Written test \\
     \bottomrule
   \end{tabular}
 \end{center}
@@ -194,7 +195,7 @@ Essay and oral presentation about the case study (in groups) for the final exam.
 \begin{center}
   \begin{tabular}{ll}
     \toprule
-    \multicolumn{2}{c}{\bf \nth{2} Quarter} \\
+    \multicolumn{2}{c}{\bfseries \nth{2} Quarter} \\
     \midrule
     Week & Topics \\
     \midrule
@@ -203,8 +204,8 @@ Essay and oral presentation about the case study (in groups) for the final exam.
     3 & Bayesian Analysis \\
     4 & Documentation and deployment \\
     5 & Privacy-preserving computational approaches \\
-    6 & \bf Written test \\
-    7 & \multirow{2}{*}{\bf Presentations and discussions} \\
+    6 & \bfseries Written test \\
+    7 & \multirow{2}{*}{\bfseries Presentations and discussions} \\
     8 & \\
     \bottomrule
   \end{tabular}
