--- a/data.tex
+++ b/data.tex
@@ -1,6 +1,10 @@
 \chapter{Fundamental data concepts}
 \label{chap:data}
 
+\chapterprecishere{The simple believes everything,
+  \par\raggedleft but the prudent gives thought to his steps.
+  \par\raggedleft--- \textup{Proverbs 14:15} (ESV)}
+
 \begin{itemize}
   \item Variables, types etc
   \item Records
