--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[twoside,a5paper]{book}
+\documentclass[twoside,a5paper]{memoir}
 
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
@@ -19,7 +19,6 @@
 %\usepackage[Glenn]{fncychap}
 \usepackage{tikz}
 
-\renewcommand{\vec}[1]{\mathbf{#1}}
 \nonfrenchspacing
 
 \begin{document}
@@ -37,7 +36,7 @@
   ItalicFont={*-Italic},
   BoldItalicFont={*-BoldItalic}]
 
-\title{\sc Data science \\ \large Foundations and practices}
+\title{\scshape Data science \\ \large Foundations and practices}
 \author{Filipe A. N. Verri}
 
 \maketitle
