--- a/history.tex
+++ b/history.tex
@@ -1,6 +1,10 @@
 \chapter{Brief history of data science}
 \label{chap:history}
 
+\chapterprecishere{``Begin at the beginning,'' the King said gravely, ``and
+go on till you come to the end: then stop.''\par\raggedleft--- \textup{Lewis
+Carroll}, Alice in Wonderland}
+
 There are many points-of-view about the beginning of data science.  For the sake of
 contextualization, I separate the topic in two approaches: the history of the term itself
 and a broad timeline of data-driven sciences highlighting the important figures in each
