Discussing usages of the term.

--- a/history.tex
+++ b/history.tex
@@ -13,7 +13,7 @@ age.
 \section{The term ``data science''}
 
 The term data science is recent and has been used to label rather different fields of
-study.  In the following, I emphasize a few notable usage of the term.
+study.  In the following, I emphasize the history of a few notable usage of the term.
 
 \def\naurds{(0,0) circle (20mm)}
 \def\naurcs{(0:5mm) circle (15mm)}
@@ -41,6 +41,7 @@ study.  In the following, I emphasize a few notable usage of the term.
     Naur's view of data science.  For him, data science studies the techniques to deal
     with data, but he delegates the meaning of data to other fields.
   }
+  \label{fig:naur}
 \end{figure}
 
 \paragraph{Peter Naur (1928 -- 2016)}
@@ -98,6 +99,7 @@ is delegated to other fields and sciences.''
     Cleveland's view of data science.  For him, data science is the ``modern'' statistics,
     where it is enlarged by computer science and domain expertise.
   }
+  \label{fig:cleveland}
 \end{figure}
 
 \paragraph{William Cleveland (born 1943)}
@@ -124,7 +126,16 @@ by some to be a buzzword\footnote{Press, Gil. "Data Science: What's The Half-Lif
 Buzzword?". Forbes. Available at
 \url{https://www.forbes.com/sites/gilpress/2013/08/19/data-science-whats-the-half-life-of-a-buzzword/}}.
 
-In \cref{chap:data}, I dare to provide a (yet another\dots) definition for the term.  I
+Most of the usages of the term in literature and in the media are either a rough
+reference to a set of data-driven techniques or a marketing strategy.  Naur
+(\cref{fig:naur}) and Cleveland (\cref{fig:cleveland}) are among the few that try to
+carefully define the term.  However, both of them do not see data science as an
+independent field of study, but an enlarged scope of an existing science.  I disagree;
+the social and economical demand for data-driven solutions led to an evolution in our
+understanding of the challenges we are facing.  As a result, we see many ``data
+scientist'' being hired and many ``data science degrees'' programs emerging.
+
+In \cref{chap:data}, I dare to provide a (yet another) definition for the term.  I
 argue that its object of study can be precisely established to support it as a new
 science.
 
