--- a/main.tex
+++ b/main.tex
@@ -40,8 +40,16 @@
 \author{Filipe A. N. Verri}
 
 \maketitle
+\thispagestyle{empty}
+\clearpage
+
+\newpage
+\ %
+\thispagestyle{empty}
+\newpage
 
 \tableofcontents
+\thispagestyle{empty}
 
 \input{about}
 \input{courses}
