ESV copyright info.

--- a/main.tex
+++ b/main.tex
@@ -44,7 +44,11 @@
 \clearpage
 
 \newpage
-\ %
+\mbox{}
+\vfill
+Scripture quotations are from The ESV® Bible (The Holy Bible, English Standard Version®),
+copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. Used by
+permission. All rights reserved.
 \thispagestyle{empty}
 \newpage
 
