Some improvements and diagrams.

--- a/data.tex
+++ b/data.tex
@@ -48,7 +48,7 @@ that data science methods use computers to handle data and perform the calculati
 problems.  \emph{Measurable phenomena} are events or processes where raw data can be
 quantified in some way.  \emph{Raw data} are data collected directly from some source and
 that have not been subject to any other manipulation by a software program or a human
-expert.
+expert.  \emph{Data} is any piece of information that can be digitally stored.
 
 \textcite{Kelleher2018} summarize very well the challenges data science takes up:
 ``extracting non-obvious and useful patterns from large data sets [\dots]; capturing,
@@ -85,7 +85,7 @@ reliable and ethical knowledge from huge amounts of data.
     \draw[outline] \verrist node {statistics};
     \draw[outline] \verride node {domain expertise};
     \draw[outline] \verrics node {computer science};
-    \node[anchor=north,above] at (0,2) {data science};
+    \node[anchor=north,above] at (0, 1) {data science};
   \end{tikzpicture}
   \caption{
     My view of data science.  Data science is an entire new science.  Being a new science
@@ -95,3 +95,10 @@ reliable and ethical knowledge from huge amounts of data.
     new scientific questions -- such as data ethics, data collection, etc.
   }
 \end{figure}
+
+\section{Structured data}
+
+As one expects, when we measure a phenomenon, the resulting data come in many different
+formats. Examples\dots
+
+Thus, it is important to
