--- a/inductive.tex
+++ b/inductive.tex
@@ -16,6 +16,30 @@ TODO: Create a figure with information below (probably a Venn):
   \end{itemize}
 \end{itemize}
 
+\begin{figure}
+  \centering
+  \begin{tikzpicture}
+    \draw[outline] (0,0) circle (30mm) node {};
+    \node[below] at (0, 2.6) {artificial intelligence};
+    \draw[outline] (0,-0.5) circle (25mm) node {};
+    \node[below] at (0, 1.6) {machine learning};
+    \draw[outline] (0,-1) circle (20mm) node {};
+    \node[below] at (0, 0.5) {predictive learning};
+    \draw[outline] (0,-1.5) circle (15mm) node {};
+    \node[below] at (0, -1.0) {inductive learning};
+    % \draw[outline] \verrist node {statistics};
+    % \draw[outline] \verride node {domain expertise};
+    % \draw[outline] \verrics node {computer science};
+    % \node[anchor=north,above] at (0,2) {data science};
+  \end{tikzpicture}
+  \caption{
+    \dots
+  }
+\end{figure}
+
+\emph{Artificial intelligence} is a very broad field.  For the sake of our scope, it is
+the field that studies algorithms that exhibit intelligent behavior.
+
 \emph{Machine learning} is a subfield of artificial intelligence that studies algorithms
 that enable computers to automatically learn and improve their performance on a task from
 experience, without being explicitly programmed by a human being.
