Adding CC BY-NC-ND 4.0 license.

--- a/courses.tex
+++ b/courses.tex
@@ -48,7 +48,7 @@ Scientific paper and oral presentation about the case study for the final exam.
 
 \paragraph{Must read:}
 \begin{itemize}
-  \item In-progress textbook at \url{https://comp.ita.br/~verri/dsp-book}.
+  \item In-progress textbook at \href{https://comp.ita.br/~verri/ds-book}{comp.ita.br/~verri/ds-book}.
   \item \fullcite{Vapnik1999}.
   \item \fullcite{Benavoli2017}.
 \end{itemize}
@@ -166,7 +166,7 @@ Essay and oral presentation about the case study (in groups) for the final exam.
 \thispagestyle{empty}
 \paragraph{Recommended reading:}
 \begin{itemize}
-  \item In-progress textbook at \url{https://comp.ita.br/~verri/dsp-book}.
+  \item In-progress textbook at \href{https://comp.ita.br/~verri/ds-book}{comp.ita.br/~verri/ds-book}.
   \item \fullcite{Vapnik1999}.
   \item \fullcite{Benavoli2017}.
 \end{itemize}
