--- a/main.tex
+++ b/main.tex
@@ -18,8 +18,14 @@
 \usepackage{cleveref}
 %\usepackage[Glenn]{fncychap}
 \usepackage{tikz}
+\usepackage{titling}
 
 \nonfrenchspacing
+
+\hypersetup{%
+  colorlinks=true,
+  linkcolor=black!70,
+  urlcolor=black!70}
 
 \begin{document}
 
@@ -36,7 +42,7 @@
   ItalicFont={*-Italic},
   BoldItalicFont={*-BoldItalic}]
 
-\title{\scshape Data science \\ \large Foundations and practices}
+\title{Data science: foundations and practices}
 \author{Filipe A. N. Verri}
 
 \maketitle
@@ -46,9 +52,19 @@
 \newpage
 \mbox{}
 \vfill
+
+\footnotesize
+
 Scripture quotations are from The ESV® Bible (The Holy Bible, English Standard Version®),
 copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. Used by
 permission. All rights reserved.
+
+\vspace{0.5cm}
+\thetitle{} © \the\year{} by \theauthor{} is licensed under
+Attribution-NonCommercial-NoDerivatives 4.0 International. To view a copy of this license,
+visit
+\href{http://creativecommons.org/licenses/by-nc-nd/4.0/}{creativecommons.org/licenses/by-nc-nd/4.0}.
+
 \thispagestyle{empty}
 \newpage
 
