Talking about philosophy as well.

--- a/courses.tex
+++ b/courses.tex
@@ -55,6 +55,7 @@ Scientific paper and oral presentation about the case study for the final exam.
 \thispagestyle{empty}
 
 \paragraph{Calendar:} The expected schedule is presented below.
+\thispagestyle{empty}
 
 \begin{center}
   \begin{tabular}{ll}
@@ -109,6 +110,7 @@ Scientific paper and oral presentation about the case study for the final exam.
 \end{center}
 
 Case studies will be presented during exam weeks.
+\thispagestyle{empty}
 
 \newpage
 \newgeometry{margin=1cm}
@@ -172,6 +174,7 @@ Essay and oral presentation about the case study (in groups) for the final exam.
 \end{itemize}
 
 \paragraph{Calendar:} The expected schedule is presented below.
+\thispagestyle{empty}
 
 \begin{center}
   \begin{tabular}{ll}
