--- a/data.tex
+++ b/data.tex
@@ -83,7 +83,7 @@ reliable and ethical knowledge from huge amounts of data.
     \end{scope}
     \draw[outline] \verrids node(ds) {};
     \draw[outline] \verrist node {statistics};
-    \draw[outline] \verride node {domain expertise};
+    \draw[outline, text width=27mm, text centered] \verride node {domain expertise philosophy};
     \draw[outline] \verrics node {computer science};
     \node[anchor=north,above] at (0, 1) {data science};
   \end{tikzpicture}
@@ -95,6 +95,22 @@ reliable and ethical knowledge from huge amounts of data.
     new scientific questions -- such as data ethics, data collection, etc.
   }
 \end{figure}
+
+\section{Deepening into the definition}
+
+\dots
+
+\subsection{Phenomena}
+
+Domain expertise and philosophy (ontology and logic).
+
+\subsection{Measuments}
+
+Data collection, data storage, data types.
+
+\subsection{Knowledge extraction}
+
+Data mainpulation, AI and statistics.
 
 \section{Structured data}
 
