Clearer course plan.

--- a/courses.tex
+++ b/courses.tex
@@ -1,6 +1,10 @@
 \chapter*{Course plan}
 
-For administrative reasons, I present the course plan for PO-235 and CMC-16.
+In the following, I present the course plan for PO-235 and CMC-16.
+
+Any questions about the classes should be sent via Google Classroom.  If your question is
+of general interest, please use the main stream.  If your question is personal and about
+a specific assignment or grade, please use the private stream.
 
 \newpage
 \newgeometry{margin=1cm}
@@ -11,7 +15,7 @@ For administrative reasons, I present the course plan for PO-235 and CMC-16.
 
 Prof. Filipe A. N. Verri
 
-\paragraph{Number of students:} Approx. 20 (hopefully close to 10)
+\paragraph{Number of students:} Approx. 20
 
 \paragraph{Course load:} 3--0--0--4
 
@@ -34,24 +38,47 @@ data science project for an inductive task.
 Expository classes in common classroom, using whiteboard, slide presentations, coding
 examples, books and scientific papers. Supplementary didactic materials will be available
 in Google Classroom. The development of the case study will happen during home study
-hours, including programming and scientific paper writing.
+hours, including programming and scientific paper writing.  All classes will be given in
+English.  Students are encouraged to ask questions in English, but Portuguese is also
+allowed. All written and oral assignments must be in English.
 
-\paragraph{Grading:} Two individual written tests in the \nth{1} and another in the \nth{2} quarter.
-Scientific paper and oral presentation about the case study for the final exam.
+\paragraph{Grading:} Two individual written tests in the \nth{1} ($T_1$ and $T_2$) and
+another in the \nth{2} quarter ($T_3$).  Also, a group activity that includes writting a
+scientific paper, developing a data science product, and a 30 minutes presentation ($L$).
+
+Final grades will be calculated as
+\begin{equation*}
+  \text{\nth{1} Q} = \sqrt{T_1 T_2}\text{,} \qquad
+  \text{\nth{2} Q} = \sqrt{T_3 L}\text{,} \qquad
+  \text{Exam} = L\text{.}
+\end{equation*}
+
+\paragraph{Case study:} Exactly 6 groups will be formed.  Each group will be responsible for
+a case study.  Students must choose a real-world problem and develop a data science
+project, including data collection, data transformation, inductive learning, validation,
+documentation, and deployment.  The results must be presented in a scientific paper
+format and a 30 minutes presentation.  The trained models must be incorporated in a
+data science product, such as a web application, a mobile application, or a web service.
 
 \paragraph{Bibliography:}
 \begin{itemize}
+  \itemsep 0pt
   \item Nina Zumel and John Mount. Practical Data Science with R. Manning, 2nd Edition, 2019.
   \item Hadley Wickham and Garret Grolemund, R for Data Science: Import, Tidy, Transform, Visualize, and Model Data. O’Reilly Media, 2017.
   \item John D. Kelleher and Brendan Tierney. Data science, MIT Press, 2018.
 \end{itemize}
 
-\paragraph{Must read:}
-\begin{itemize}
-  \item In-progress textbook at \href{https://comp.ita.br/~verri/ds-book}{comp.ita.br/~verri/ds-book}.
-  \item \fullcite{Vapnik1999}.
-  \item \fullcite{Benavoli2017}.
-\end{itemize}
+The first two books (Zumel and Mount, and Wickham and Grolemund) are available online for free.
+
+% \paragraph{Must read:}
+% \begin{itemize}
+%   \itemsep 0pt
+%   \item In-progress textbook at \href{https://comp.ita.br/~verri/ds-book}{comp.ita.br/~verri/ds-book}.
+%   \item \fullcite{Vapnik1999}.
+%   \item \fullcite{Benavoli2017}.
+% \end{itemize}
+
+Any required extra material will be made available in Google Classroom.
 \thispagestyle{empty}
 
 \paragraph{Calendar:} The expected schedule is presented below.
@@ -109,7 +136,9 @@ Scientific paper and oral presentation about the case study for the final exam.
   \end{tabular}
 \end{center}
 
-Case studies will be presented during exam weeks.
+Case studies will be presented during exam weeks.  At most 3 case studies will be
+presented per day, with 30 minutes for each presentation and 20 minutes for questions.
+
 \thispagestyle{empty}
 
 \newpage
@@ -123,7 +152,7 @@ Case studies will be presented during exam weeks.
 
 Prof. Filipe A. N. Verri
 
-\paragraph{Number of students:} Approx. 20
+\paragraph{Number of students:} Approx. 20 (no more than 40 students)
 
 \paragraph{Course load:} 2--0--1--5
 
@@ -157,6 +186,13 @@ classes and home study hours, including programming and writing essays.
 \paragraph{Grading:} One individual written test in the \nth{1} and another in the \nth{2} quarter.
 Essay and oral presentation about the case study (in groups) for the final exam.
 
+\paragraph{Case study:} Exactly 6 groups will be formed.  Each group will be responsible for
+a case study.  Students must choose a real-world problem and develop a data science
+project, including data collection, data transformation, inductive learning, validation,
+documentation, and deployment.  The results must be presented in a short essay (max. 3
+pages) and a 30 minutes presentation.  The trained models must be incorporated in a data
+science product, such as a web application, a mobile application, or a web service.
+
 \newpage
 \paragraph{Bibliography:}
 \begin{itemize}
@@ -165,6 +201,8 @@ Essay and oral presentation about the case study (in groups) for the final exam.
   \item John D. Kelleher and Brendan Tierney. Data Science, MIT Press, 2018.
 \end{itemize}
 
+The first two books (Zumel and Mount, and Wickham and Grolemund) are available online for free.
+
 \thispagestyle{empty}
 \paragraph{Recommended reading:}
 \begin{itemize}
@@ -172,6 +210,7 @@ Essay and oral presentation about the case study (in groups) for the final exam.
   \item \fullcite{Vapnik1999}.
   \item \fullcite{Benavoli2017}.
 \end{itemize}
+Any extra material will be made available in Google Classroom.
 
 \paragraph{Calendar:} The expected schedule is presented below.
 \thispagestyle{empty}
